display each core percentage

--- a/plugins/systeminfo/src/main/java/assets/templates/systeminfo-full-screen.jade
+++ b/plugins/systeminfo/src/main/java/assets/templates/systeminfo-full-screen.jade
@@ -29,7 +29,7 @@
     .col-md-6.cpu-info.infobox
         h2.name
         p
-            b Phyisical cores:&nbsp;
+            b Physical cores:&nbsp;
             span.physical-cores
             | &nbsp;
             b Logical cores:&nbsp;
