add a docker module (finally) add some log on each request fixx console log and file rolling

--- a/plugins/docker/src/main/java/assets/less/docker.less
+++ b/plugins/docker/src/main/java/assets/less/docker.less
@@ -1,3 +1,21 @@
-.docker {
-  background-color: blue;
+.docker.size-1x1 {
+  background-color: #0087C9;
+  color: white;
+  background-image: url("../files/images/docker.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h1{
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  p.header{
+    margin: 0 2px;
+  }
+
+  p.footer{
+    text-align: center;
+    font-size: 11px;
+  }
 }
