--- a/plugins/docker/src/main/java/assets/templates/docker-settings.jade
+++ b/plugins/docker/src/main/java/assets/templates/docker-settings.jade
@@ -3,7 +3,7 @@
     if settings && settings.containsKey("url")
         input.form-control(type="text", id="url", name="url", placeholder="URL", value='#{settings.get("url")}')
     else
-        if(model.containsKey("DOCKER_HOST"))
+        if(model && model.containsKey("DOCKER_HOST"))
             input.form-control(type="text", id="url", name ="url", placeholder = "URL", value='#{model.get("DOCKER_HOST")}')
         else
             input.form-control(type="text", id="url", name ="url", placeholder = "URL")
