--- a/plugins/harddisk/src/main/java/assets/templates/harddisk-full-screen.jade
+++ b/plugins/harddisk/src/main/java/assets/templates/harddisk-full-screen.jade
@@ -11,4 +11,5 @@ p.current-path
 table.files.table.table-striped.table-hover
     tbody
 
-.clipboard
+table.clipboard.table.table-condensed
+    tbody
