- version 1.0.18 - add animation on page loading to avoid showing  a module without data. - adjust text size here and there to avoid having line breaking on some modules.

--- a/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
+++ b/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
@@ -35,7 +35,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     z-index: 10;
 
     p {
@@ -44,7 +44,7 @@
 
       span {
         color: white;
-        font-size: 25px;
+        font-size: 20px;
       }
     }
   }
@@ -64,7 +64,7 @@
         color: rgba(0, 0, 0, 0.5);
       }
 
-      .graph-container{
+      .graph-container {
         margin-bottom: 5px;
       }
 
