--- a/plugins/systeminfo/src/main/java/assets/templates/systeminfo-2x1.jade
+++ b/plugins/systeminfo/src/main/java/assets/templates/systeminfo-2x1.jade
@@ -5,9 +5,9 @@
             path.ram-svg(d="")
 .legend
     p
-        | CPU:
+        | CPU:&nbsp;
         span.cpu-txt 0
         | %
     p
-        | RAM:
+        | RAM:&nbsp;
         span.ram-txt 0
