--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -56,6 +56,38 @@
     -webkit-transition: all @transition-speed !important;
     transition: all @transition-speed !important;
 
+    .module-loading {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 100;
+      background-color: @accentColor;
+
+      @moduleLoadingSpeed: 0.25s;
+      -webkit-transition: all @moduleLoadingSpeed;
+      -moz-transition: all @moduleLoadingSpeed;
+      -ms-transition: all @moduleLoadingSpeed;
+      -o-transition: all @moduleLoadingSpeed;
+      transition: all @moduleLoadingSpeed;
+
+      transform-origin: center center;
+
+      animation: module-loading-breathing 2s infinite ease-in-out;
+      animation-direction: alternate;
+    }
+
+    .module-loading.fade {
+      opacity: 0;
+      @loadingScale: 1.5;
+      -webkit-transform: scale(@loadingScale);
+      -moz-transform: scale(@loadingScale);
+      -ms-transform: scale(@loadingScale);
+      -o-transform: scale(@loadingScale);
+      transform: scale(@loadingScale);
+    }
+
     .module {
       position: relative;
       height: 100%;
@@ -65,7 +97,7 @@
         right: 5px;
         top: 5px;
         z-index: 99;
-        color:white;
+        color: white;
         font-size: 15px;
 
         a {
@@ -140,6 +172,17 @@
     // module
   }
   // ul
+}
+
+@keyframes module-loading-breathing {
+  from {
+    background-color: @accentColor;
+  }
+
+  to {
+    background-color: darken(@accentColor, 10%);
+  }
+
 }
 
 @keyframes show-grid {
@@ -312,9 +355,9 @@
   left: 0;
   right: 0;
   bottom: -100px;
-  height:50px;
+  height: 50px;
   background-color: @accentColor;
-  z-index:10;
+  z-index: 10;
   -webkit-transition: all @transition-speed !important;
   transition: all @transition-speed !important;
 
@@ -335,7 +378,7 @@
   .icon:before {
     position: absolute;
     top: 15px;
-    left:12px;
+    left: 12px;
     content: "\f00a";
   }
 
@@ -354,22 +397,20 @@
     font: 25px FontAwesome;
     -webkit-transition: all @transition-speed !important;
     transition: all @transition-speed !important;
-    cursor:pointer;
+    cursor: pointer;
   }
 
   .close-editing:before {
     position: absolute;
     top: 14px;
-    right:12px;
+    right: 12px;
     content: "\f00d";
   }
 
-  .close-editing:hover{
-      color:  darken(@accentColor, 20%);
-    background-color:@accentColor;
+  .close-editing:hover {
+    color: darken(@accentColor, 20%);
+    background-color: @accentColor;
   }
-
-
 
   .message {
     display: block;
