--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -6,7 +6,7 @@ block css
         link(href="/plugin/#{plugin.getId()}/css/#{plugin.getId()}.css", rel="stylesheet")
 block content
     h1#page-title
-        i.fa.fa-chevron-right(aria-hidden="true")
+        i.fa.fa-bars(aria-hidden="true")
         span.name
         span.layout
     div#layout-wrapper
