show different progress bar for  seeding torrents in transmission plugin add option to auto delete completed torrents in transmission plugin

--- a/plugins/transmission/src/main/java/assets/less/transmission.less
+++ b/plugins/transmission/src/main/java/assets/less/transmission.less
@@ -237,6 +237,15 @@
         width: 95%;
       }
     }
+
+    .progress.seeding {
+      @accentColor: #e67e22;
+      background-color: @accentColor;
+
+      .progress-bar {
+        background-color: darken(@accentColor, 10%);
+      }
+    }
   }
 
   .module-overlay {
@@ -269,7 +278,7 @@
     text-align: center;
     font-size: 20px;
 
-    p{
+    p {
       margin: 6px;
     }
   }
