set app as full screen on ios when added to home screem

--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -3,13 +3,14 @@ html(lang="en")
     head
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0", name="viewport")
-
+        meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", name="viewport")
+        meta(name="apple-mobile-web-app-capable", content="yes")
+        meta(name="apple-mobile-web-app-status-bar-style", content="white")
         title HomeDash
         //link(href="http://fonts.googleapis.com/css?family=Roboto:300,300italic", rel="stylesheet", type="text/css")
         link(href='/css/main.css', rel='stylesheet')
         //link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
-
+        //script(type="text/javascript", src="/js/ios-script.js")
         block css
     body
         #notification
