fix bug of setting validation error message not showing properly

--- a/web/src/main/resources/templates/module-settings.jade
+++ b/web/src/main/resources/templates/module-settings.jade
@@ -5,15 +5,14 @@ block content
     .head-links
         a(href="/") << Back
     h1 Settings for #{pluginName}
-
     if errors
         .alert.alert-danger(role="alert")
             each message, title in errors
                 p
                     strong
-                        #{title}
+                        = title
                         | :&nbsp;
-                    #{message}
+                    = message
 
 
     form(action="/save-module", method="post")
