add image management for Docker plugin use full blown twitter bootstrap add twitter bootstrap config.json to regenerate it with proper colors next time
V 1.0.30

--- a/plugins/docker/src/main/java/assets/less/docker.less
+++ b/plugins/docker/src/main/java/assets/less/docker.less
@@ -5,17 +5,23 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  h1{
+  h1 {
     text-align: center;
     margin-top: 10px;
   }
 
-  p.header{
+  p.header {
     margin: 0 2px;
   }
 
-  p.footer{
+  p.footer {
     text-align: center;
     font-size: 11px;
+  }
+}
+
+.docker.size-full-screen {
+  .image-modal, .container-modal {
+    cursor: pointer;
   }
 }
