--- a/plugins/docker/src/main/java/assets/templates/docker-modal.jade
+++ b/plugins/docker/src/main/java/assets/templates/docker-modal.jade
@@ -1,4 +1,4 @@
-.modal.fade(tabindex="-1", role="dialog")
+#container-modal.modal.fade(tabindex="-1", role="dialog")
     .modal-dialog(role="document")
         .modal-content
             .modal-header
@@ -13,5 +13,8 @@
                 button.btn.btn-danger.action.not-running(data-action="remove") Remove
 
                 hr/
+                p
+                    strong ID:&nbsp;
+                    span.id
                 .container-info
 
