add kiosk mode for a single module impleemnt kiosk mode for system info plugin

--- a/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
+++ b/plugins/systeminfo/src/main/java/assets/less/systeminfo.less
@@ -50,6 +50,21 @@
   }
 }
 
+.systeminfo.size-kiosk {
+  .legend {
+    padding: 35vh 10vw 0 10vw;
+
+    p {
+      font-size: 10vh;
+
+      span{
+        font-size: 12vh;
+      }
+    }
+  }
+
+}
+
 .systeminfo.size-full-screen {
   color: black;
   background-color: white;
